fixed overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,8 @@
+html,body{
+  height: 100%;
+  width: 100%;
+}
+
 body{
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -15,35 +20,24 @@ body{
   border-color: none;
 }
 
-//body background
 
-#background{
+//main page
+.header{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   background: url('/images/bg2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -222;
-}
-
-//main page
-.header{
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-  // background-color: #2c3e50;
-  // background: url('/images/bg2.jpg');
-  // background-position: center;
-  // background-size: cover;
-  // background-repeat: no-repeat;
-  // z-index: -222;
-  // -webkit-filter: grayscale(50%); /* Chrome, Safari, Opera */
-  //  filter: grayscale(50%);
   opacity: 0.9;
 }
 
 .text-verticle-center{
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -54,3 +48,6 @@ body{
     }
     // background-color: #22B573;
 }
+
+
+// gallery page
